--- a/Objects/htdemo.build_log.htm
+++ b/Objects/htdemo.build_log.htm
@@ -21,48 +21,12 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.9.0
 Dialog DLL:      TCM.DLL V1.53.0.0
  
 <h2>Project:</h2>
-C:\Users\AngryBeast\Desktop\bs\2.小车蓝牙遥控实验\HJduino.uvprojx
+C:\Users\AngryBeast\Desktop\bs\myhardware\HJduino.uvprojx
 Project File Date:  03/25/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'D:\codeSoftware\keil5_arm\ARM\ARMCC\Bin'
-Rebuild target 'armdemo'
-compiling IRCtrol.c...
-compiling main.c...
-compiling stm32f10x_bkp.c...
-compiling interface.c...
-compiling motor.c...
-compiling misc.c...
-compiling uart.c...
-compiling stm32f10x_it.c...
-compiling LCD1602.c...
-compiling stm32f10x_can.c...
-compiling stm32f10x_adc.c...
-compiling stm32f10x_cec.c...
-compiling stm32f10x_gpio.c...
-compiling stm32f10x_iwdg.c...
-compiling stm32f10x_dbgmcu.c...
-compiling stm32f10x_crc.c...
-compiling stm32f10x_dma.c...
-compiling stm32f10x_i2c.c...
-compiling stm32f10x_dac.c...
-compiling stm32f10x_exti.c...
-compiling stm32f10x_flash.c...
-compiling stm32f10x_fsmc.c...
-assembling startup_stm32f10x_hd.s...
-compiling core_cm3.c...
-compiling stm32f10x_pwr.c...
-compiling stm32f10x_rtc.c...
-compiling stm32f10x_spi.c...
-compiling stm32f10x_rcc.c...
-compiling stm32f10x_sdio.c...
-compiling stm32f10x_wwdg.c...
-compiling stm32f10x_usart.c...
-compiling system_stm32f10x.c...
-compiling stm32f10x_tim.c...
-linking...
-Program Size: Code=3892 RO-data=360 RW-data=40 ZI-data=1632  
-FromELF: creating hex file...
+Build target 'armdemo'
 ".\Objects\htdemo.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -76,7 +40,7 @@ Package Vendor: Keil
   D:\codeSoftware\keil5_arm\packet\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
